💄 Add PrismJS Syntax Highlighting

--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:ital,wght@0,400;0,600;0,900;1,400&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{{asset "built/style.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "built/normalise.css"}}" />
-
+    <script src="{{asset "built/casper.js"}}"></script>
 </head>
 <body>
     {{ghost_head}}
