--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 :root {
   --primary-colour: black;
   --accent-colour: #eee;
+  --burst-colour: #900;
   --background-colour: white;
 
   --font-family-heading: "Playfair Display";
@@ -171,4 +172,29 @@ body {
 .centre-hero main {
   font-family: var(--font-family-body);
   line-height: var(--line-height-body);
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata,
+.token.punctuation,
+.token.operator {
+  color: var(--burst-colour);
+}
+
+.token.namespace {
+  opacity: 0.7;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
 }
