💄 Tweak  style to include keywords.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,8 @@ body {
 .token.doctype,
 .token.cdata,
 .token.punctuation,
-.token.operator {
+.token.operator,
+.token.keyword {
   color: var(--burst-colour);
 }
 
